--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,32 @@
   background-image: linear-gradient(45deg, purple, blue);
 }
 
+.rizz {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.15);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
+
+.rizz-content {
+  background: #fff;
+  border-radius: 5px;
+  padding: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  max-width: 100%;
+  z-index: 101;
+  color: black;
+}
+
+video{
+  max-width: 500px;
+  min-width: 200px;
+  width: 100%;
+  height: auto;
+}
